# hatch-cpp

./: .copier-answers.yaml  .copier-answers.yml  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml
hatch_cpp/: __init__.py  config.py  hooks.py  plugin.py  structs.py  utils.py
hatch_cpp/tests/: test_hatch_build.py  test_platform_specific.py  test_project_basic.py  test_projects.py  test_structs.py  test_vcpkg_ref.py
hatch_cpp/tests/test_project_basic/: pyproject.toml
hatch_cpp/tests/test_project_basic/cpp/basic-project/: basic.cpp
hatch_cpp/tests/test_project_basic/cpp/project/: basic.hpp
hatch_cpp/tests/test_project_cmake/: CMakeLists.txt  pyproject.toml
hatch_cpp/tests/test_project_cmake_vcpkg/: Makefile  vcpkg.json
hatch_cpp/tests/test_project_hatch_build/: pyproject.toml
hatch_cpp/tests/test_project_hatch_build/cpp/project/: basic.cpp  basic.hpp
hatch_cpp/tests/test_project_limited_api/: pyproject.toml
hatch_cpp/tests/test_project_nanobind/: pyproject.toml
hatch_cpp/tests/test_project_override_classes/: pyproject.toml
hatch_cpp/tests/test_project_override_classes/cpp/project/: basic.cpp
hatch_cpp/tests/test_project_override_toolchain/: pyproject.toml
hatch_cpp/tests/test_project_pybind/: pyproject.toml
hatch_cpp/tests/test_project_pybind_vcpkg/: pyproject.toml  vcpkg.json
hatch_cpp/tests/test_project_pybind_vcpkg/cpp/project/: basic.cpp  basic.hpp
hatch_cpp/toolchains/: __init__.py  cmake.py  common.py  vcpkg.py
