[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "hatch-cpp-test-project-basic"
description = "Basic test project for hatch-cpp"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "hatchling>=1.20",
    "hatch-cpp",
]

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
include = [
    "/basic_project",
]
exclude = []

[tool.hatch.build.targets.wheel]
include = [
    "/basic_project",
]
exclude = [
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.hooks.hatch-cpp]
build-function = "hatch_cpp.cpp_builder"
ensured-targets = []
skip-if-exists = []
dependencies = [
    "hatch-cpp",
]

[tool.hatch.build.hooks.hatch-cpp.build-kwargs]
path = "cpp"
build_cmd = "build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "basic_project/tests"
